@@ -1,6 +1,8 @@
 DIST FileZilla_3.0.4_src.tar.bz2 1875419 RMD160 e615c0bebf1e93dc9a5d311856a351a238411961 SHA1 795c0754f6fbc6164e2ab6b25839b6010ddbfbb2 SHA256 2cb617a96c0ba145ee54c0c6a388fa2e735b9db9fba1b5f1fd76ec97c22b5801
 DIST FileZilla_3.1.1.1_src.tar.bz2 2577107 RMD160 19976306e774a590e117bd1ee1a11bb870c3f5c8 SHA1 68787d69871810140bb5b83a8f6d2b931168fb63 SHA256 66ab5fa44fcb6f6d72fd2e5f064ddbb11f3e7d5ce8a6e3f3e1ccf9e35dc8a90c
+DIST FileZilla_3.1.2_src.tar.bz2 2592536 RMD160 6706d296d698ab9caa08f42b418846b9369c2ee6 SHA1 b6e376a0967ba292c307b4af8b3fc8fdb40bec1d SHA256 93829b6892feb88294949427ee9eae5a97fea589f8c0ee08e22efe125a85e653
 EBUILD filezilla-3.0.4.ebuild 1046 RMD160 1ab30d775ce6093bee506cb34c6bb4935737610e SHA1 3bcf0616da32b231f20da3e99489c3b5b2d7e1d7 SHA256 7374f4d1f15bcb26aa6174007f55f22992cd4491febe4749406724b8c446c885
 EBUILD filezilla-3.1.1.1.ebuild 1051 RMD160 31bb4c3211d6633ce41a759a3f1bbaac8b139a15 SHA1 d6e44513f9b4e289dd7ae839c394047e1e42583e SHA256 09e6d1d5118355c981a9aae09c87f80eabdbfdf91e04574ca9b3fc4d5c2fae42
-MISC ChangeLog 2945 RMD160 066f9d0002fc93a4b1335acd3bedd1e8b8a98e1b SHA1 27bf9559cf6817c7700406919a54f66c4d4cf2f2 SHA256 5d5b80a8722167d572701dd47aca2b84cfb543784a438416d1cf079ad6a31efb
+EBUILD filezilla-3.1.2.ebuild 1049 RMD160 b12ae436e010e5004eec89402c00beed574df42a SHA1 c051b7742b8b98ad51a3c0b65d43c199322ea74e SHA256 089035df4f0178f588cfc910bcd8d9975de2cd2cfe80c6bbea84351b0b6d3130
+MISC ChangeLog 3121 RMD160 330bc320456627c13994d26f58dc363bb53b6b55 SHA1 d69ea93779e45a96cc2c30ef2ef8e84968a616ae SHA256 f4fa97dcb0188ad453e34ba926e395ffa6399798a92d0f6d90e78389c8c09c4e
 MISC metadata.xml 439 RMD160 777e90ac25186a53c9ca6ee4cc32a272d9841e48 SHA1 b98ba90029186fcdf7d1716d27db919ba1fe293d SHA256 075b0c0d73cfd724cd58017dc5827f1d7502b77010fce101424b3201be734162
