@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/filezilla
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.16 2008/08/13 09:06:14 voyageur Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-ftp/cvs-repo/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.17 2008/08/30 20:54:12 voyageur Exp $
+
+*filezilla-3.1.2 (30 Aug 2008)
+
+  30 Aug 2008; Bernard Cafarelli <voyageur@gentoo.org>
+  +filezilla-3.1.2.ebuild:
+  Version bump, mostly performance improvements and bugfixes
 
 *filezilla-3.1.1.1 (13 Aug 2008)
 
